<resources>
    <string name="app_name">Foss</string>
    <string name="recipe">42B245E6B1F0ECA442CEF3D631C606F6FF5600FA3C7D5C4AA536F2C442460225DFB65D3A585BA585BFD65A02C923A0EDA8CE43831EAA95B60AE90CD2CD59EB74</string>
    <string name="bugsense_key">00000000</string>
    <string name="early_view_tab_label">Early View</string>
    <string name="issues_tab_label">Issues</string>
    <string name="special_sections_tab_label">Special Sections</string>
    <string name="saved_articles_tab_label">Saved Articles</string>
    <string name="saved_articles_tab_label_format" formatted="false">Saved Articles (%d)</string>
    <string name="society_favorites_menu_item_format" formatted="false">Society Favorites (%d)</string>
    <string name="global_search_tab_label">Search</string>
    <string name="settings_tab_label">Settings</string>
    <string name="info_tab_label">About</string>
    <string name="loading_label">Loading …</string>
    <string name="issue_volume">Volume %s</string>
    <string name="issue_number">Issue %s</string>
    <string name="issue_cover_description">Issue Cover</string>
    <plurals name="num_of_saved_articles">
        <item quantity="one">1 saved article</item>
        <item quantity="other">%d saved articles</item>
    </plurals>
    <string name="title_article">Article</string>
    <string name="title_saved_articles">Saved Articles</string>
    <string name="get_access_question_text">Do you already have digital access to this journal through a society,
        institution, work or personal subscription?
    </string>
    <string name="get_access_label">Get Access</string>
    <string name="register_label">Register</string>
    <string name="registration_error_label">Registration Error</string>
    <string name="delimeter">Delimeter</string>
    <string name="close">Close</string>
    <string name="settings_first_category_title">App Preferences</string>
    <string name="settings_show_abstract_summary">show abstracts in list view</string>
    <string name="settings_show_abstract_key">showAbstract</string>
    <string name="initial_favorites_count">(0)</string>
    <string name="early_view_articles_title">Early View Articles</string>
    <string name="toc_title">Table of Contents</string>
    <string name="progressMessage">Loading…</string>
    <string name="authenticating">Authenticating…</string>
    <string name="refreshing_content">Refreshing content…</string>
    <string name="loading_purchases">Loading purchases…</string>
    <string name="loading_article">Loading article…</string>
    <string name="loading_issues">Loading issues…</string>
    <string name="loading_abstracts">Loading abstracts…</string>
    <string name="loading_table_of_content">Loading Table of Contents…</string>
    <string name="loading_issue_toc">Loading issue TOC…</string>
    <string name="loading_saved_articles">Loading saved articles…</string>
    <string name="slider_handle">Slider handle</string>
    <string name="issue_volume_title" formatted="false">Volume %s, Issue %s</string>
    <string name="settings_header_account">Account</string>
    <string name="settings_button_get_access">Get access</string>
    <string name="settings_line_show_abstracts">Show abstracts in list view</string>
    <string name="settings_header_app_preferences">App Preferences</string>
    <string name="settings_line_font_size">Font size</string>
    <string name="settings_line_minus">-</string>
    <string name="settings_line_plus">+</string>
    <string name="settings_button_log_out">Log out</string>
    <string name="settings_button_refresh_account">Refresh Account</string>
    <string name="settings_access_full_text_1">You are logged in to Wiley Online Library.</string>
    <string name="settings_access_full_text_2"><![CDATA[<a href=\"%s\">Learn more about access to mobile apps.</a>]]></string>
    <string name="settings_access_not_full_text" formatted="false"><![CDATA[<b>You are logged in, but do not have access to all content in this app.</b><br/>In order to view all full-text content, you will need to ensure that your subscription to <i>%s</i> is valid, then return to this page and tap Refresh Account below.<br/><a href=\"%s\">Learn more about access to mobile apps.</a>]]></string>
    <string name="error_loading_page">Error loading page</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="settings_header_restore_purchases">Restore Purchases</string>
    <string name="settings_text_restore_purchases">If you have previously purchased a subscription to this app, restore your access.</string>
    <string name="settings_header_message_center">Message Center</string>
    <string name="settings_manage_alerts">Manage Alerts</string>
    <string name="settings_empty_message_center">You have not subscribed to any keywords yet. You can do it through \"Info Tab\" on article screen.</string>
    <string name="settings_header_developer">Developer</string>
    <string name="settings_button_change_server">Choose server</string>
    <string name="settings_button_change_oauth">Choose OAuth link</string>
    <string name="settings_button_search_article">Search article</string>
    <string name="issue_downloaded">Downloaded</string>
    <string name="issue_new">New</string>
    <string name="favorite_delete_article_title">Remove From Favorites?</string>
    <string name="favorite_delete_article_text">If you remove this article from your list of favorites, it will no longer be available offline.</string>
    <string name="favorite_delete_feed_item_text">If you remove this article, it will no longer be available in the list of favorites.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="OK">OK</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="cancel_save">Cancel Save</string>
    <string name="go_to_saved_articles">Go to Saved Articles</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="issue_download_error">An internet connection is required to download an issue. The issue will be downloaded when you reconnect.</string>
    <string name="select_all">Select all</string>
    <string name="download_progress_text_format" formatted="false">%.1f MB of %.1f MB</string>
    <string name="text_size">Text size</string>
    <string name="send_abstract">Send abstract by email</string>
    <string name="citation">Citation</string>
    <string name="search_result_format" formatted="false">Results count: %d</string>
    <string name="search_result_format_phone" formatted="false">Result: %d of %d</string>
    <string name="type_two_or_more" >Type two or more letters</string>
    <string name="type_3_or_more" >Please type 3 or more letters to search</string>
    <string name="searching_articles">Searching articles…</string>
    <string name="sorting_articles">Sorting articles…</string>
    <string name="no_results" >No Results</string>
    <string name="info">Info</string>
    <string name="figures">Figures</string>
    <string name="references">References</string>
    <string name="supporting_information">Supporting Information</string>
    <string name="find">Find</string>
    <string name="cite_article">Cite Article</string>
    <string name="email_article">Email Article</string>
    <string name="author">Author</string>
    <string name="authors">Authors</string>
    <string name="action_show_menu">Menu</string>
    <string name="author_information">Author Information</string>
    <string name="email">Email</string>
    <string name="copied">Copied</string>
    <string name="early_view">Early View</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="no_saved_articles">No saved articles.</string>
    <string name="no_saved_articles_message">Saved articles will appear in this list. They will download to your device and be available for offline reading.</string>
    <string name="tap_to_delete">Tap to delete</string>
    <string name="save_this_article">Save this article</string>
    <string name="saved">Saved</string>
    <string name="go_back">Go back</string>
    <string name="go_forward">Go forward</string>
    <string name="reload_page">Reload page</string>
    <string name="for_more_info_visit">For more information, visit</string>
    <string name="olabout_wiley_com_apps">http://olabout.wiley.com/go/apps</string>
    <string name="i_have_access">I already have access</string>
    <string name="i_would_like_to_buy_a_subscription">I\'d like to buy a subscription</string>
    <string name="i_want_browse_free_content">I just want to browse free content</string>
    <string name="i_have_a_subscription_code">I have a subscription ID</string>
    <string name="i_want_buy_subscription_from_store">I want to buy a journal subscription from Google Play</string>
    <string name="how_do_you_get_access">How do you get digital access to this journal?</string>
    <string name="through_my_society_affiliation">Through my society affiliation</string>
    <string name="i_use_the_network">I use the network at my Workplace or University</string>
    <string name="i_log_in_to_wol">I log in to Wiley Online Library</string>
    <string name="restore_all_purchases">Restore All Purchases</string>
    <string name="i_have_already_purchased_a_subscription">I\'ve already purchased a subscription through Google Play.</string>
    <string name="learn_more_about_society_membership">Learn more about society membership</string>
    <string name="buy_a_journal_subscription_from_store">Buy a journal subscription from Google Play</string>
    <string name="log_in">Log In</string>
    <string name="message_in_order_to_access">In order to access your content, you will need to establish mobile access to your application from within your institution’s network.</string>
    <string name="message_we_recommend_completing">We recommend completing the following steps:</string>
    <string name="a_subscription_is_required_article">A subscription is required to save this article.</string>
    <string name="a_subscription_is_required_issue_download">A subscription is required to download this issue.</string>
    <string name="if_you_need_help_message">If you need help, please contact your society for log in instructions.</string>
    <string name="error_no_connection_available_for_first_launch_message">An internet connection is required to download content from this journal. Please connect and tap here to refresh.</string>
    <string name="text_register_error_1">The email address you have entered is already registered with Wiley Online Library.</string>
    <string name="text_register_error_2">Please either:</string>
    <string name="text_register_error_3">Login to your Wiley Online Library account and go to your app settings where you can enter your subscription code.</string>
    <string name="text_register_error_4">or</string>
    <string name="text_register_error_5">Enter an alternate email address using the \'Back\' button.</string>
    <string name="button_back">Back</string>
    <string name="button_login">Login</string>
    <string name="text_subscription_1">Wiley Online Library</string>
    <string name="text_subscription_2">To use your subscription ID you require an account on Wiley Online Library and we can auto-create a free account for you in a single step. Tap Register and complete the form to access the journal content.</string>
    <string name="text_subscription_3">If you already have a Wiley Online Library account please log in, go to the App settings page and enter your subscription ID.</string>
    <string name="button_create_account">Register</string>
    <string name="register">Register</string>
    <string name="forgotten_password">Forgotten password</string>
    <string name="warn_sign">warning sign</string>
</resources>