<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GetAccessScreenRoot"
    android:orientation="vertical">

    <TextView
        style="@style/GetAccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:text="@string/text_register_error_1" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <TextView
        style="@style/GetAccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:text="@string/text_register_error_2" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <TextView
        style="@style/GetAccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:text="@string/text_register_error_3" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <TextView
        style="@style/GetAccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:text="@string/text_register_error_4" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <TextView
        style="@style/GetAccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:text="@string/text_register_error_5" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            style="@style/GetAccessBlueButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/button_back" />

        <Space
            android:layout_width="24dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login"
            style="@style/GetAccessBlueButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_login" />
    </LinearLayout>

    <include
        layout="@layout/get_access_more_info_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>