<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/GetAccessScreenRoot"
        android:orientation="vertical">

        <TextView
            android:id="@+id/get_access_warn_message"
            style="@style/GetAccessText.WarnText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/get_access_lock_icon"
            android:text="@string/a_subscription_is_required_article"/>

        <TextView
            style="@style/GetAccessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_access_question_text" />

        <Button
            android:id="@+id/get_access_i_have_access"
            style="@style/GetAccessBlueButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/i_have_access" />

        <Button
            android:id="@+id/get_access_i_want_buy_subscription_from_store"
            style="@style/GetAccessBlueButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/i_want_buy_subscription_from_store" />

        <Button
            android:id="@+id/get_access_browse_free_content"
            style="@style/GetAccessBlueButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/i_want_browse_free_content" />

        <Button
            android:id="@+id/get_access_i_have_a_subscription_code"
            style="@style/GetAccessBlueButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/i_have_a_subscription_code" />

        <include
            layout="@layout/get_access_more_info_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_black_transparent_rect"
            android:orientation="vertical"
            android:padding="5dp">

            <ProgressBar
                style="@android:style/Widget.Holo.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/progress_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:text="" />
        </LinearLayout>

    </FrameLayout>
</FrameLayout>
