<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/error_massage_background"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/warn_sign_2x"
            android:contentDescription="@string/warn_sign"/>

        <TextView
            android:id="@+id/error_title"
            style="@style/SettingsText.Header"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#222"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/no_internet_connection"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:layout_gravity="center_horizontal"
            android:text="@string/error_no_connection_available_for_first_launch_message"/>
    </LinearLayout>


</LinearLayout>